--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "method-override": "^2.3.9",
+    "morgan": "^1.8.2",
     "mysql2": "^1.3.6",
     "passport": "^0.3.2",
+    "passport-google-oauth2": "^0.1.6",
     "passport-local": "^1.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
