--- a/app/config/config.json
+++ b/app/config/config.json
@@ -1,14 +1,14 @@
  {
   "development": {
     "user": "root",
-    "password": "root",
+    "password": "caeser",
     "database": "fidodb",
     "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
     "user": "root",
-    "password": "root",
+    "password": "caeser",
     "database": "fidodb",
     "host": "localhost",
     "dialect": "mysql"
