--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport-local": "^1.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-form": "^1.3.0",
     "react-router": "^4.1.2",
     "sequelize": "^4.3.2",
     "sequelize-cli": "^2.7.0"
