--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
+    "google-auth-library": "^0.10.0",
+    "googleapis": "^20.1.0",
     "method-override": "^2.3.9",
     "morgan": "^1.8.2",
     "mysql2": "^1.3.6",
