--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "passport-google-oauth2": "^0.1.6",
     "passport-local": "^1.0.0",
     "react": "^15.6.1",
+    "react-addons-css-transition-group": "^15.6.0",
     "react-dom": "^15.6.1",
     "react-form": "^1.3.0",
+    "react-infinite-calendar": "^2.3.1",
     "react-router": "^4.1.2",
     "sequelize": "^4.3.2",
     "sequelize-cli": "^2.7.0"
