--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-form": "^1.3.0",
+    "react-redux": "^5.0.5",
     "react-router": "^4.1.2",
+    "redux": "^3.7.2",
     "sequelize": "^4.3.2",
     "sequelize-cli": "^2.7.0"
   }
