--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "react-form": "^1.3.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
+    "redux-promise": "^0.5.3",
     "sequelize": "^4.3.2",
     "sequelize-cli": "^2.7.0"
   }
