--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
+    "file-loader": "^0.11.2",
+    "image-webpack-loader": "^3.3.1",
     "morgan": "^1.8.2",
     "style-loader": "^0.18.2",
     "webpack": "^3.3.0"
@@ -25,9 +27,11 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
+    "css-loader": "^0.28.4",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "google-auth-library": "^0.10.0",
+    "google-maps-react": "^1.0.19",
     "googleapis": "^20.1.0",
     "method-override": "^2.3.9",
     "morgan": "^1.8.2",
@@ -46,6 +50,7 @@
     "redux": "^3.7.2",
     "redux-promise": "^0.5.3",
     "sequelize": "^4.3.2",
-    "sequelize-cli": "^2.7.0"
+    "sequelize-cli": "^2.7.0",
+    "style-loader": "^0.18.2"
   }
 }
