--- a/app/config/config.json
+++ b/app/config/config.json
@@ -2,19 +2,19 @@
   "development": {
     "user": "root",
     "password": "caeser",
-    "database": "fidodb",
+    "database": "fidoandtiger_db",
     "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
     "user": "root",
     "password": "caeser",
-    "database": "fidodb",
+    "database": "fidoandtiger_db",
     "host": "localhost",
     "dialect": "mysql"
   },
   "production": {
-    "database": "fidodb",
+    "database": "fidoandtiger_db",
     "use_env_variable": "JAWSDB_URL",
     "dialect": "mysql"
   }
